[package]
name = "rsxkcd"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
porter-stemmer = "0.1.2"
regex = "1.11.1"
reqwest = {version = "0.12.22", features = ["json"]}
serde = {version = "1.0.219", features = ["derive"]}
sqlite = "0.37.0"
thiserror = "2.0.12"
tokio = {version = "1.46.1", features = ["full"]}
